<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PastOrderDetailsFragment">

    <ImageView
        android:id="@+id/backIconPastOrderDetails"
        android:layout_width="@dimen/menu_width"
        android:layout_height="@dimen/menu_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pastOrderDetailsOrderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/past_order_details_order_number"
        android:textColor="@color/black"
        android:textSize="@dimen/fifteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/l_r_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/l_r_margin"
        android:background="@color/background"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/reorderButtonPastOrderDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pastOrderDetailsOrderNumber">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/past_order_completion_status"
                    android:textColor="@color/green"
                    android:textSize="@dimen/fifteen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divider"
                    android:fontFamily="@font/roboto_slab"
                    android:textSize="@dimen/twelve_sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    tools:layout_editor_absoluteX="145dp"
                    tools:layout_editor_absoluteY="42dp" />

                <TextView
                    android:id="@+id/pastOrderDetailsTimestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fifteen" />

            </LinearLayout>

            <TextView
                android:id="@+id/yourOrdersPastOrderDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/your_orders"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

            <TextView
                android:id="@+id/rateOrderPastOrderDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/light_grey_background"
                android:fontFamily="@font/roboto_slab"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/rate_order"
                android:textColor="@color/black"
                android:textSize="@dimen/twelve_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pastOrderDetailsCartItemsRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourOrdersPastOrderDetails" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pastOrderDetailsCartItemsRecycler" />

            <TextView
                android:id="@+id/totalPricePastOrderDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/reorderButtonPastOrderDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reorder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>