<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pastOrdersBackground"
    android:layout_width="match_parent"
    android:layout_height="@dimen/past_order_height"
    android:layout_marginBottom="@dimen/l_r_margin"
    android:background="@drawable/green_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/pastOrderCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pastOrderImage"
            android:layout_width="@dimen/past_order_image_w"
            android:layout_height="@dimen/past_order_height"
            android:src="@drawable/burger2"
            app:layout_constraintBottom_toBottomOf="@+id/lastMealBackground"
            app:layout_constraintStart_toStartOf="@+id/lastMealBackground"
            app:layout_constraintTop_toTopOf="@+id/lastMealBackground" />

        <ImageView
            android:id="@+id/pastOrderLikeCircle"
            android:layout_width="@dimen/heart_w_h"
            android:layout_height="@dimen/heart_w_h"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/heart_margin"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/reorderTvPastOrders"
        android:layout_width="@dimen/reorder_w"
        android:layout_height="25dp"
        android:layout_marginEnd="@dimen/l_r_margin"
        android:background="@drawable/white_background"
        android:text="@string/reorder"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_slab"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintBottom_toBottomOf="@+id/pastOrdersBackground"
        app:layout_constraintEnd_toEndOf="@+id/pastOrdersBackground"
        app:layout_constraintTop_toTopOf="@+id/pastOrdersBackground" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pastOrderCardView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pastOrderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:fontFamily="@font/roboto_slab_bold"
            android:textSize="@dimen/twelve_sp"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="6dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/numberOfItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_items"
                android:fontFamily="@font/roboto_slab"
                android:textSize="@dimen/twelve_sp"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider"
                android:fontFamily="@font/roboto_slab"
                android:textSize="@dimen/twelve_sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="42dp" />

            <TextView
                android:id="@+id/pastOrderPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:fontFamily="@font/roboto_slab"
                android:textSize="@dimen/twelve_sp"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="25dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/pastOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:fontFamily="@font/roboto_slab"
                android:textSize="@dimen/twelve_sp"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="42dp" />

            <TextView
                android:id="@+id/pastOrderDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider"
                android:fontFamily="@font/roboto_slab"
                android:textSize="@dimen/twelve_sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="42dp" />

            <TextView
                android:id="@+id/pastOrderCompletionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_order_completion_status"
                android:fontFamily="@font/roboto_slab"
                android:textSize="@dimen/twelve_sp"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="41dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>