<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayout"
    app:mode="same_level">

    <!--Swipe Layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/removeItemTv"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/remove_item"
            android:fontFamily="@font/roboto_slab"
            android:textSize="@dimen/twelve_sp"
            android:textColor="@color/background"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/l_r_margin">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/numberPerMealInCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/black_outline"
                android:fontFamily="@font/roboto_slab"
                android:paddingStart="7dp"
                android:paddingTop="1dp"
                android:paddingEnd="7dp"
                android:paddingBottom="1dp"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="@dimen/twelve_sp" />

            <TextView
                android:id="@+id/nameOfMealInCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/slurpy_fruity"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/priceOfMealInCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>