<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SearchFragments.SearchFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/searchFragmentHeaderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/l_r_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/search_screen_header"
        android:textColor="@color/black"
        android:textSize="@dimen/header_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addNewMealStaffSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/add_new_meal"
        android:textColor="@color/black"
        android:textSize="@dimen/fifteen"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/light_grey_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/l_r_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/searchTextViewSearchFragment"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/l_r_margin"
        android:layout_marginTop="@dimen/thirty_two"
        android:layout_marginEnd="@dimen/l_r_margin"
        android:background="@drawable/search_border"
        android:queryHint="@string/search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFragmentHeaderTv" />

    <ImageView
        android:layout_width="@dimen/menu_width"
        android:layout_height="@dimen/menu_height"
        android:layout_marginStart="16dp"
        android:src="@drawable/search1"
        app:layout_constraintBottom_toBottomOf="@+id/searchTextViewSearchFragment"
        app:layout_constraintStart_toStartOf="@+id/searchTextViewSearchFragment"
        app:layout_constraintTop_toTopOf="@+id/searchTextViewSearchFragment" />

    <TextView
        android:id="@+id/categoriesHeaderSearchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="@dimen/header_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTextViewSearchFragment" />

    <TextView
        android:id="@+id/staffSignOutTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/light_grey_background"
        android:fontFamily="@font/roboto_slab"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        android:textSize="@dimen/fifteen"
        app:layout_constraintBottom_toBottomOf="@+id/categoriesHeaderSearchFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/categoriesHeaderSearchFragment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRecyclerSearchFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoriesHeaderSearchFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>