<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/favourites_h_w"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/l_r_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/favouritesCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/favourites_h_w"
            app:cardCornerRadius="@dimen/corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/favouritesImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/favourites_h_w"
                app:srcCompat="@drawable/placeholder_image" />

            <ImageView
                android:id="@+id/favouritesLikeCircle"
                android:layout_width="@dimen/heart_w_h"
                android:layout_height="@dimen/heart_w_h"
                android:layout_gravity="top|end"
                android:layout_margin="5dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/favouriteProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:maxLines="1"
            android:text="@string/slurpy_fruity"
            android:textColor="@color/black"
            android:textSize="@dimen/twelve_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|start">

            <TextView
                android:id="@+id/favouriteProductCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/drink"
                android:textColor="@color/black"
                android:textSize="@dimen/twelve_sp"
                tools:layout_editor_absoluteY="108dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/divider"
                android:textColor="@color/black"
                android:textSize="@dimen/twelve_sp"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="42dp" />

            <TextView
                android:id="@+id/favouritesPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/twelve_sp"
                tools:layout_editor_absoluteY="108dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>